[gd_scene load_steps=4 format=3 uid="uid://b1xl5tju2ah25"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_4enbw"]
[ext_resource type="PackedScene" uid="uid://dxx4yd2hu7t1s" path="res://assets/item_button.tscn" id="2_y0meq"]
[ext_resource type="Texture2D" uid="uid://bnig4tb6ldprv" path="res://assets/UI/Gear.svg" id="3_qsccl"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4enbw")

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 7.0
offset_right = 204.0
offset_bottom = 71.0
text = "Test"

[node name="BonusLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 128.0
offset_right = 204.0
offset_bottom = 192.0
text = "Bonus"

[node name="UpgradeList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 2

[node name="SeedBTN" parent="UpgradeList" groups=["KSave"] instance=ExtResource("2_y0meq")]
layout_mode = 2
itemNAME = "Seed"
prodBASE = 0.5
multiplierCost = 2547.0

[node name="SproutBTN" parent="UpgradeList" groups=["KSave"] instance=ExtResource("2_y0meq")]
layout_mode = 2
itemNAME = "Sprout"
costBASE = 43.0
prodBASE = 1.3
rateGROWTH = 1.16
multiplierCost = 4927.0

[node name="SaplingBTN" parent="UpgradeList" groups=["KSave"] instance=ExtResource("2_y0meq")]
layout_mode = 2
itemNAME = "Sapling"
costBASE = 465.0
prodBASE = 3.3
rateGROWTH = 1.27
multiplierCost = 11035.0

[node name="YoungBTN" parent="UpgradeList" groups=["KSave"] instance=ExtResource("2_y0meq")]
layout_mode = 2
itemNAME = "Young"
costBASE = 5029.0
prodBASE = 8.3
rateGROWTH = 1.39
multiplierCost = 26592.0

[node name="MatureBTN" parent="UpgradeList" groups=["KSave"] instance=ExtResource("2_y0meq")]
layout_mode = 2
itemNAME = "Mature"
costBASE = 54389.0
prodBASE = 20.8
rateGROWTH = 1.39
multiplierCost = 68956.0

[node name="FruitBTN" parent="UpgradeList" groups=["KSave"] instance=ExtResource("2_y0meq")]
layout_mode = 2
itemNAME = "Fruit"
costBASE = 588217.0
prodBASE = 52.0
rateGROWTH = 1.66
multiplierCost = 192410.0

[node name="TimePassed" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confirmation" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 228.0
offset_right = 23.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
text = "Saved"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Settings" type="Button" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("3_qsccl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SettingsMenu"]
self_modulate = Color(0.211765, 0.211765, 0.211765, 0.662745)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="SettingsMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SaveGame" type="Button" parent="SettingsMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Save game"

[node name="DeleteSave" type="Button" parent="SettingsMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Delete save data"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="ExitnSave" type="Button" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit and Save"

[node name="ExitGame" type="Button" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit game"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/VBoxContainer/DeleteSave" to="." method="_on_delete_save_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/HBoxContainer/ExitnSave" to="." method="_on_exitn_save_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/HBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
